incorporando vista principal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--etiqueta responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Foodmap</title>
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -15,20 +16,7 @@
         <h1 class="title-food text-uppercase">food map</h1>
       </div>
     </div>
-    <div class="container-fluid start">
-  <div class="row">
-    <div class="col-xs-12 flex">
-      <img src="assets/images/logo-pink.png" alt="logo-pink">
-    </div>
-  </div>
-  <div class="row">
-    <!--botones-->
-    <div class="col-xs-12 flex">
-      <button href="#" class="uppercase btn btn-default btn-start">log in </button>
-      <a href="views/sign-up.html" class="uppercase btn btn-default btn-start">sign up </a>
-    </div>
-  </div>
-</div>
+
 
 
 
