mejorando vista splash

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foodmap</title>
   <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <link rel="stylesheet" href="vendors/css/materialize.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="">
   <!-- This loader will apear for 6 seconds while the side is loading -->
-  <div  class="valign-wrapper center-align yellow-text text-darken-4 splash">
-    <h1>Foodmap</h1>
+  <div  class="valign-wrapper center-align white-text  splash ">
+    <h1>Dessertmap</h1>
   </div>
-  <div class="container yellow-text text-darken-4 center-align principal-container">
+  <div class="container white-text center-align principal-container">
     <div class="row">
       <div class="col s12">
-        <h1>Foodmap</h1>
+        <h1>Dessertmap</h1>
       </div>
     </div>
     <div class="row">
@@ -25,8 +26,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col s12">
-        <h2>Bienvenido!!!</h2>
+      <div class="col s12 black-text">
+        <h4><i class="fas fa-utensils"></i>Fúndete de placer<i class="far fa-smile"></i></h4>
       </div>
     </div>
     <div class="row">
