--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="vendors/css/materialize.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="">
   <!-- This loader will apear for 6 seconds while the side is loading -->
-  <div  class="valign-wrapper center-align yellow-text text-darken-4 splash">
-    <h1>Foodmap</h1>
+  <div  class="valign-wrapper center-align  splash">
+    <h1>Dessertmap</h1>
   </div>
-  <div class="container yellow-text text-darken-4 center-align principal-container">
+  <div class="container text-darken-4 center-align principal-container">
     <div class="row">
       <div class="col s12">
-        <h1>Foodmap</h1>
+        <h1>Dessertmap</h1>
       </div>
     </div>
     <div class="row">
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
       <div class="col s12">
-        <h2>Bienvenido!!!</h2>
+        <h2><i class="fas fa-utensils"></i>Fúndete de placer<i class="fas fa-utensils"></i></h2>
       </div>
     </div>
     <div class="row">
@@ -54,6 +54,7 @@
   <script src="vendors/js/jquery-3.2.1.js"></script>
   <script src="vendors/js/materialize.min.js"></script>
   <script src="js/app.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBueYkODHE9Em7WFAZSrodcAMlqDzf5RZE&libraries=places"></script>
 </body>
 </html>
